--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,5 @@
-
-# BEGIN WordPress
-RewriteEngine On
-RewriteBase /
+RewriteEngine on
+RewriteBase /psgbd/
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /index.php [L]
-# END WordPress
+RewriteRule ^(.*) index.php?query=$1 [QSA,L]
